--- a/portfolio__frontend/styles/prism-theme.css
+++ b/portfolio__frontend/styles/prism-theme.css
@@ -29,11 +29,13 @@ pre[class*="language-"] {
   margin: 0.5em 0;
   overflow-x: auto;
   border-radius: 0.3em;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-  background: #272822;
+  background: #060614;
 }
 
 /* Inline code */
