--- a/portfolio__frontend/styles/globals.css
+++ b/portfolio__frontend/styles/globals.css
@@ -10,4 +10,8 @@
   .large-title {
     @apply text-2xl font-bold text-black dark:text-gray-100 md:text-3xl;
   }
+
+  .xl-title {
+    @apply text-3xl font-bold text-black dark:text-gray-100 md:text-4xl;
+  }
 }
