--- a/portfolio__frontend/styles/globals.css
+++ b/portfolio__frontend/styles/globals.css
@@ -14,4 +14,12 @@
   .xl-title {
     @apply text-3xl font-bold text-black dark:text-gray-100 md:text-4xl;
   }
+
+  .normal-paragraph {
+    @apply text-base text-black dark:text-gray-300 2xl:text-lg;
+  }
+
+  .semi-bold-paragraph {
+    @apply text-base font-semibold text-black dark:text-gray-300 2xl:text-lg;
+  }
 }
