--- a/portfolio__frontend/styles/globals.css
+++ b/portfolio__frontend/styles/globals.css
@@ -19,7 +19,11 @@
     @apply text-base text-black dark:text-gray-300 2xl:text-lg;
   }
 
-  .semi-bold-paragraph {
-    @apply text-base font-semibold text-black dark:text-gray-300 2xl:text-lg;
+  .small-paragraph {
+    @apply text-sm text-black dark:text-gray-300 2xl:text-base;
+  }
+
+  .xsmall-paragraph {
+    @apply text-xs text-black dark:text-gray-300 2xl:text-sm;
   }
 }
