--- a/portfolio__frontend/styles/globals.css
+++ b/portfolio__frontend/styles/globals.css
@@ -4,15 +4,19 @@
 
 @layer utilities {
   .normal-title {
-    @apply text-xl font-bold text-black dark:text-gray-100 md:text-2xl;
+    @apply text-xl text-black dark:text-gray-100 md:text-2xl;
   }
 
   .large-title {
-    @apply text-2xl font-bold text-black dark:text-gray-100 md:text-3xl;
+    @apply text-2xl text-black dark:text-gray-100 md:text-3xl;
   }
 
   .xl-title {
-    @apply text-3xl font-bold text-black dark:text-gray-100 md:text-4xl;
+    @apply text-3xl text-black dark:text-gray-100 md:text-4xl;
+  }
+
+  .small-title {
+    @apply text-base text-black md:text-lg dark:text-gray-300;
   }
 
   .normal-paragraph {
